// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar Component > props.children works fine 1`] = `
<div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span
      style="transform: scale(1);"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </span>
  </div>
</div>
`;

exports[`Avatar Component > props.content works fine 1`] = `
<div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span
      style="transform: scale(1);"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </span>
  </div>
</div>
`;

exports[`Avatar Component > props.shape is equal to circle 1`] = `
<div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span
      style="transform: scale(1);"
    />
  </div>
</div>
`;

exports[`Avatar Component > props.shape is equal to round 1`] = `
<div>
  <div
    class="t-avatar t-avatar--round"
  >
    <span
      style="transform: scale(1);"
    />
  </div>
</div>
`;

exports[`AvatarGroup Component > props.cascading is equal to left-up 1`] = `
<div>
  <div
    class="t-avatar-group t-avatar--offset-left"
  />
</div>
`;

exports[`AvatarGroup Component > props.cascading is equal to right-up 1`] = `
<div>
  <div
    class="t-avatar-group t-avatar--offset-right"
  />
</div>
`;

exports[`AvatarGroup Component > props.collapseAvatar works fine 1`] = `
<div>
  <div
    class="t-avatar-group t-avatar--offset-right"
  >
    <div
      class="t-avatar t-avatar--circle"
    >
      <div
        class="t-image__wrapper t-image__wrapper--shape-square"
      >
        <img
          class="t-image t-image--fit-fill t-image--position-center"
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
        <div
          class="t-image__loading"
        >
          <div
            class="t-space t-space-align-center t-space-vertical"
            style="gap: 8px;"
          >
            <div
              class="t-space-item"
            >
              <svg
                class="t-icon t-icon-image"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="image"
                >
                  <path
                    d="M3 21H20L9 10L3 16V21Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <circle
                    cx="15.75"
                    cy="8.25"
                    fill="transparent"
                    id="fill2"
                    r="2"
                  />
                  <path
                    d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <circle
                    cx="15.75"
                    cy="8.25"
                    id="stroke2"
                    r="2"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </div>
            <div
              class="t-space-item"
            >
              图片加载中
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-avatar t-avatar--circle"
    >
      <span
        style="transform: scale(1);"
      >
        W
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle t-avatar__icon"
    />
    <div
      class="t-avatar t-avatar__collapse t-avatar--circle"
    >
      <span
        style="transform: scale(1);"
      >
        <span
          class="custom-node"
        >
          TNode
        </span>
      </span>
    </div>
  </div>
</div>
`;
